<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/mainGrid">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DefaultDiceMessage"
            android:id="@+id/firstResult"
            android:layout_row="0"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:paddingRight="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonMessage"
            android:id="@+id/firstButton"
            android:layout_row="0"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DefaultDiceMessage"
            android:id="@+id/secondResult"
            android:layout_row="1"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:paddingRight="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonMessage"
            android:id="@+id/secondButton"
            android:layout_row="1"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/thirdResult"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/DefaultDiceMessage"
            android:paddingLeft="10dp"
            android:paddingRight="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonMessage"
            android:id="@+id/thirdButton"
            android:layout_row="2"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DefaultDiceMessage"
            android:id="@+id/fourthResult"
            android:layout_row="3"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:paddingRight="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonMessage"
            android:id="@+id/fourthButton"
            android:layout_row="3"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DefaultDiceMessage"
            android:id="@+id/fifthResult"
            android:layout_row="4"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:paddingRight="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonMessage"
            android:id="@+id/fifthButton"
            android:layout_row="4"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/DefaultDiceMessage"
            android:id="@+id/sixthResult"
            android:layout_row="5"
            android:layout_column="0"
            android:paddingLeft="10dp"
            android:paddingRight="20dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultButtonMessage"
            android:id="@+id/sixthButton"
            android:layout_row="5"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/playerOneName"
            android:id="@+id/p1view"
            android:layout_row="7"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/p1Health"
            android:layout_row="7"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/p1Points"
            android:layout_row="7"
            android:layout_column="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/playerTwoName"
            android:id="@+id/p2view"
            android:layout_row="8"
            android:layout_column="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Player"
            android:id="@+id/PlayerHeader"
            android:layout_row="6"
            android:layout_column="0"
            android:textColor="#000000"
            android:textSize="15dp"
            android:paddingTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/HealthHeader"
            android:id="@+id/textView"
            android:layout_row="6"
            android:layout_column="1"
            android:textColor="#000000"
            android:textSize="15dp"
            android:paddingTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/pointsHeader"
            android:id="@+id/vicPoints"
            android:layout_row="6"
            android:layout_column="2"
            android:textColor="#000000"
            android:textSize="15dp"
            android:paddingTop="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/p2Health"
            android:layout_row="8"
            android:layout_column="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="0"
            android:id="@+id/p2Points"
            android:layout_row="8"
            android:layout_column="2" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rollButton"
            android:id="@+id/rollAllDice"
            android:layout_row="11"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal" />

    </GridLayout>
</RelativeLayout>
